--- a/css/chrome.css
+++ b/css/chrome.css
@@ -843,6 +843,8 @@ padding-bottom:10px;
   color:#ad6200;
   font-weight: bold;
   float: right;
+  background-color: #2e36403d;
+  border: none;
 }
 .igizle
 {
