--- a/css/chrome.css
+++ b/css/chrome.css
@@ -870,7 +870,7 @@ padding-bottom:10px;
   font-size: 14px;
   padding: 10px;
   list-style-type: none;
-  border-radius: 5px;
+  border-radius: 5px 5px 5px 5px;
   overflow-y: scroll;
   height: 200px;
 }
